<resources>
    <string name="app_name">SuperHangman</string>

    <!-- Game Button strings -->
    <string name="btn_menu_label">Menu</string>
    <string name="btn_a_label">A</string>
    <string name="btn_b_label">B</string>
    <string name="btn_c_label">C</string>
    <string name="btn_d_label">D</string>
    <string name="btn_e_label">E</string>
    <string name="btn_f_label">F</string>
    <string name="btn_g_label">G</string>
    <string name="btn_h_label">H</string>
    <string name="btn_i_label">I</string>
    <string name="btn_j_label">J</string>
    <string name="btn_k_label">K</string>
    <string name="btn_l_label">L</string>
    <string name="btn_m_label">M</string>
    <string name="btn_n_label">N</string>
    <string name="btn_o_label">O</string>
    <string name="btn_p_label">P</string>
    <string name="btn_q_label">Q</string>
    <string name="btn_r_label">R</string>
    <string name="btn_s_label">S</string>
    <string name="btn_t_label">T</string>
    <string name="btn_u_label">U</string>
    <string name="btn_v_label">V</string>
    <string name="btn_w_label">W</string>
    <string name="btn_x_label">X</string>
    <string name="btn_y_label">Y</string>
    <string name="btn_z_label">Z</string>
    <string name="btn_hint_label">\?</string>

    <!-- MenuActivity strings -->
    <string name="welcome_title">Welcome to SuperHangman</string>
    <string name="btn_play_label">Play</string>
    <string name="btn_match_history_label">Match History</string>
    <string name="btn_high_score_label">High Scores</string>
    <string name="btn_settings_label">Settings</string>
    <string name="btn_guide_label">Guide</string>

    <!-- GameActivity strings -->
    <string name="secret_word_label_tmp">●●●●●●</string>
    <string name="time_label">Time</string>
    <string name="high_score_label">Score\n%1$d</string>

    <!-- EndGameActivity strings -->
    <string name="finish_status_label_tmp">Status Label</string>
    <string name="finish_body_status_label_tmp">Body Status Label</string>
    <string name="btn_continue_label">Continue</string>
    <string name="end_game_title_label_won">Congratulations, you won!</string>
    <string name="end_game_body_label_won">You guessed \'%1$s\' in just %2$d rounds! Dope!\n\nFeel like playing again? Press Continue to improve your high score!</string>
    <string name="end_game_title_label_lost">Oh dear, you lost!</string>
    <string name="end_game_body_label_loss">But don\'t worry! You can always play again. The word was \'%1$s\'.\n\nBetter luck next time!</string>
    <string name="secret_word_hider">●</string>

    <!-- GuideActivity strings -->
    <string name="guide_title_label">GUIDE</string>
    <string name="guide_body_label">SuperHangman is a hangman game, where you start out with 6 lives and a score of 0.\n\nYou have to guess a secret word, and you do so by guessing one letter at a time. If the letter you\'ve guessed is not in the word, you lose one of your 6 lives and your score will be decreased by 1 point if its higher than 0.\n\nIf you use up all of your lives, you have lost. If you manage to guess the secret word without using all of your lives, you\'ll get the length of the word added to your score, and you can decide to continue to play to improve your score further or not.\n\nThe \'?\' buttons found while playing the game are hint buttons. They will give you the next letter in the word, by the cost of 1 score point.\n\nGood luck and have fun!</string>

    <!-- MatchHistoryActivity strings -->
    <string name="match_history_title_label">MATCH HISTORY</string>
    <string name="score_count_label_tmp">Score\n0</string>
    <string name="btn_match_history_reset">Reset</string>
    <string name="match_history_label_tmp">Oops, nothing to see here!\n\nPlay a game and check back later!</string>
    <string name="match_object_label">Score: %1$d\nWins: %2$d\nAverage time spent: %3$ss\nLast word: %4$s</string>
    <string name="match_history_reset_failed">Failed resetting the match history!</string>

    <!-- HighScoreActivity strings -->
    <string name="high_score_title_label">HIGH SCORES</string>

    <!-- Image Content Descriptions -->
    <string name="hangman_image_desc">Hangman</string>
    <string name="happy_smile_image_desc">Smile</string>
    <string name="sad_smile_image_desc">Sad</string>

    <!-- Special -->
    <string name="not_implemented">To be implemented!</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_match_history">MatchHistoryActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>