<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.inabsentia.superhangman.activity.EndGameActivity">

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="255dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/round_btn"
        android:fontFamily="@font/coiny"
        android:text="@string/btn_continue_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/smiley_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/happy_smile_image_desc"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/happy_smiley"/>

    <TextView
        android:id="@+id/status_body"
        android:layout_width="310dp"
        android:layout_height="220dp"
        android:fontFamily="@font/roboto"
        android:text="@string/finish_body_status_label_tmp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiley_image"
        app:layout_constraintVertical_bias="0.428"/>

</android.support.constraint.ConstraintLayout>